--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "metalsmith-markdown": "~0.2.1",
     "metalsmith-collections": "~0.6.0",
     "metalsmith-permalinks": "~0.4.0",
-    "metalsmith-excerpts": "~1.0.0"
+    "metalsmith-excerpts": "~1.0.0",
+    "moment": "~2.8.3"
   },
   "devDependencies": {
     "metalsmith-templates": "~0.5.2",
